Fixed styles of FeaturesSkeleton on tablet-media.

--- a/src/components/FeaturesSkeleton/styles.module.css
+++ b/src/components/FeaturesSkeleton/styles.module.css
@@ -21,9 +21,9 @@
   background-color: rgba(115, 116, 117, 0.8);
 }
 
-.titleFirst,
-.titleSecond,
-.titleThird {
+.title,
+.title,
+.title {
   max-width: 350px;
   height: 40px;
   border-radius: 10px;
@@ -31,11 +31,11 @@
   background-color: rgba(115, 116, 117, 0.8);
 }
 
-.titleFirst {
+.title:nth-child(2) {
   max-width: 280px;
 }
 
-.titleThird {
+.title:nth-child(4) {
   max-width: 120px;
   margin-bottom: 25px;
 }
@@ -78,17 +78,6 @@
   background-color: rgba(115, 116, 117, 0.8);
 }
 
-/* .aside {
-} */
-
-/* .features {
-  display: flex;
-  gap: 30px;
-  flex-direction: column;
-  align-items: center;
-  flex-wrap: wrap;
-} */
-
 .feature {
   max-width: 158px;
   height: 133px;
@@ -120,6 +109,7 @@
 
 @media screen and (min-width: 768px) {
   .section {
+    top: 4188px;
     padding: 100px 0;
   }
 
@@ -127,39 +117,53 @@
     max-width: 768px;
     padding: 0 39px;
     display: flex;
-    gap: 30px;
-    flex-direction: row-reverse;
+    flex-direction: column;
   }
 
   .content {
-    flex-basis: 330px;
+    max-width: 500px;
   }
 
   .title {
     max-width: 230px;
-    height: 33px;
+    height: 43px;
     border-radius: 10px;
-    margin: 0 auto 25px 0;
+    margin: 0 auto 5px 0;
     background-color: rgba(115, 116, 117, 0.8);
+  }
+
+  .title:nth-child(3) {
+    max-width: 480px;
+    margin-bottom: 28px;
+  }
+
+  .title:nth-child(4) {
+    display: none;
+  }
+
+  .welcome {
+    margin-bottom: 30px;
   }
 
   .paragraph.last {
     margin-bottom: 65px;
   }
 
-  .aside {
-    display: flex;
-    gap: 30px;
-    flex-direction: column;
-    width: 330px;
-    height: 500px;
+  .text:nth-child(2) {
+    display: none;
   }
 
-  .img {
-    width: 330px;
-    height: 235px;
-    border-radius: 10px;
-    background-color: rgba(115, 116, 117, 0.8);
+  .features {
+    max-width: 450px;
+    padding-top: 35px;
+    justify-content: center;
+    align-items: center;
+    align-self: flex-end;
+  }
+
+  .feature {
+    width: 170px;
+    flex-basis: initial;
   }
 }
 
